tests/spectest/ref_as_non_null.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\91\80\80\80\00\03\60"
  "\00\01\7f\60\01\64\00\01\7f\60\01\63\00\01\7f\03"
  "\88\80\80\80\00\07\01\02\00\00\00\00\00\07\bc\80"
  "\80\80\00\04\0d\6e\75\6c\6c\61\62\6c\65\2d\6e\75"
  "\6c\6c\00\03\0d\6e\6f\6e\6e\75\6c\6c\61\62\6c\65"
  "\2d\66\00\04\0a\6e\75\6c\6c\61\62\6c\65\2d\66\00"
  "\05\0b\75\6e\72\65\61\63\68\61\62\6c\65\00\06\09"
  "\85\80\80\80\00\01\01\00\01\02\0a\ce\80\80\80\00"
  "\07\87\80\80\80\00\00\20\00\d4\14\00\0b\87\80\80"
  "\80\00\00\20\00\d4\14\00\0b\84\80\80\80\00\00\41"
  "\07\0b\86\80\80\80\00\00\d0\00\10\01\0b\86\80\80"
  "\80\00\00\d2\02\10\00\0b\86\80\80\80\00\00\d2\02"
  "\10\01\0b\86\80\80\80\00\00\00\d4\10\00\0b"
)
(module instance)
(assert_trap (invoke "unreachable") "unreachable")
(assert_trap (invoke "nullable-null") "null reference")
(assert_return (invoke "nonnullable-f") (i32.const 0x7))
(assert_return (invoke "nullable-f") (i32.const 0x7))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\8d\80\80\80\00\03\60"
    "\00\01\7f\60\01\64\00\00\60\00\00\03\83\80\80\80"
    "\00\02\01\02\0a\97\80\80\80\00\02\86\80\80\80\00"
    "\00\20\00\d4\1a\0b\86\80\80\80\00\00\d0\00\10\00"
    "\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\93\80\80\80\00\04\60"
  "\00\00\60\01\64\00\00\60\01\64\70\00\60\01\64\6f"
  "\00\03\84\80\80\80\00\03\01\02\03\0a\a2\80\80\80"
  "\00\03\86\80\80\80\00\00\20\00\d4\1a\0b\86\80\80"
  "\80\00\00\20\00\d4\1a\0b\86\80\80\80\00\00\20\00"
  "\d4\1a\0b"
)
(module instance)
